--- a/website/templates/restaurant-login.html
+++ b/website/templates/restaurant-login.html
@@ -46,7 +46,7 @@
   </head>
   <body>
     <div class="container">
-      <form action="login.php" method="POST">
+      <form action="/restaurantLogin" method="POST">
         <h2>Login</h2>
         <label for="email">Email:</label>
         <input type="text" id="email" name="email" required>
