--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,6 +13,7 @@
 .restaurantLogin,
 .deliveryAgentSignup,
 .deliveryAgentLogin {
+  background-color: #fff;
   background-image: url('./images/img18.jpg');
   display: flex;
   height: 90vh;
@@ -21,11 +22,11 @@
   font-size: 3rem;
 }
 
-.customerSignup{
+.SignUp{
   background-color: #fff;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   color: #000;
-  font-size: 100px;
+  font-size: 20px;
 }
