--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -30,3 +30,13 @@
   color: #000;
   font-size: 20px;
 }
+
+.my-table {
+  border-collapse: collapse;
+}
+
+.my-table th, .my-table td {
+  border: 1px solid black;
+  padding: 8px;
+  text-align: center;
+}
