Working on Frontend Designing

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,9 +5,12 @@
   font-family: 'PT Sans', sans-serif;
 }
 
-.home,
-.about-us,
-.customerLogin,
+html, body, #app, #app>div {
+  height: 100%
+}
+
+/* .home,
+.AboutUs,
 .customerSignup,
 .restaurantSignup,
 .restaurantLogin,
@@ -20,16 +23,120 @@
   align-items: center;
   justify-content: center;
   font-size: 3rem;
+} */
+
+/* Login form design*/
+
+.Login{
+  background-color: #3d3f49;
+}
+.background-form{
+  width: 430px;
+  height: 520px;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  left: 50%;
+  top: 50%;
+}
+.background-form .shape{
+  height: 200px;
+  width: 200px;
+  position: absolute;
+  border-radius: 50%;
+}
+.shape:first-child{
+  background: linear-gradient(
+    #1845ad,
+    #23a2f6
+    );
+    left: -80px;
+    top: -80px;
+  }
+  .shape:last-child{
+    background: linear-gradient(
+      to right,
+      #ff512f,
+      #f09819
+      );
+      right: -30px;
+      bottom: -80px;
+    }
+
+    .login-form{
+      height: 520px;
+      width: 400px;
+      background-color: rgba(255,255,255,0.13);
+      position: absolute;
+      transform: translate(-50%,-50%);
+      top: 50%;
+      left: 50%;
+      border-radius: 10px;
+      backdrop-filter: blur(10px);
+      border: 2px solid rgba(255,255,255,0.1);
+      box-shadow: 0 0 40px rgba(8,7,16,0.6);
+      padding: 50px 35px;
+    }
+    
+    .login-form *{
+      font-family: 'Poppins',sans-serif;
+      color: #ffffff;
+      letter-spacing: 0.5px;
+      outline: none;
+      border: none;
+    }
+    
+    .login-form .h1{
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 42px;
+  text-align: center;
 }
 
-.SignUp{
-  background-color: #fff;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #000;
-  font-size: 20px;
+
+.footer .btnlogin{
+  margin-top: 50px;
+  width: 100%;
+  background-color: #ffffff;
+  color: #080710;
+  padding: 15px 0;
+  font-size: 18px;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
 }
+
+.footer .btnlogin:hover{
+  background-color: #000;
+  color: #fff;
+  transition-duration: 400ms;
+}
+
+.login-form .form__input{
+  display: block;
+  height: 50px;
+  width: 100%;
+  background-color: rgba(255,255,255,0.07);
+  border-radius: 3px;
+  padding: 0 10px;
+  margin-top: 8px;
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.login-form ::placeholder{
+  color: #e5e5e5
+}
+
+
+
+/* Menu Icon */
+
+.menu-icon{
+  color:#fff
+}
+
+
+/* Table Design*/
 
 .my-table {
   border-collapse: collapse;
@@ -40,3 +147,106 @@
   padding: 8px;
   text-align: center;
 }
+
+
+/* Sign Up Design */
+
+.SignUp{
+  justify-content: center;
+	align-items: center;
+  background: url("../src/images/img22.jpg") no-repeat center/ cover;
+}
+
+.signup-form{
+	overflow: hidden;
+  border-color: #fff;
+	/* background: url("../src/images/img20.jpg") no-repeat center/ cover; */
+	border-radius: 10px;
+	box-shadow: 5px 20px 50px #000;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  left: 50%;
+  top: 50%;
+  width: 500px;
+	height: 600px;
+}
+
+.signup-form .form__input{
+  width: 60%;
+	height: 20px;
+	background: #fff;
+	display: flex;
+	margin: 10px auto;
+	padding: 12px;
+	border: none;
+	outline: none;
+	border-radius: 5px;
+}
+
+.signup-form *{
+  color:#000
+}
+
+
+.footer .btnsignup{
+  margin-left: 120px;
+  margin-top: 20px;
+  width: 50%;
+  background-color: #ffffff;
+  color: #080710;
+  padding: 15px 15px;
+  font-size: 18px;
+  font-weight: 600;
+  border-radius: px;
+  cursor: pointer;
+}
+
+.footer .btnsignup:hover{
+  background-color: #000;
+  color: #fff;
+  transition-duration: 400ms;
+}
+
+.signup-form ::placeholder{
+  color: #000
+}
+
+.signup-form .gender *{
+  color:#000;
+  visibility: visible;
+}
+
+.signup-form .header{
+  color:#fff;
+}
+
+.CustomerDashboard{
+  background-image: url("../src/images/img23.jpg");
+}
+
+.CustomerDashboard .cdashcont .cdashoptions{
+  text-align: center;
+}
+
+
+.CustomerDashboard .cdashcont .cdashoptions .cdashbuttons{
+  padding: 10px;
+  width:20%;
+  margin-top: 50px;
+  background-color: #ffffff;
+  color: #080710;
+  padding: 15px 0;
+  font-size: 18px;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+
+.CustomerDashboard .cdashcont .cdashoptions .cdashbuttons:hover{
+  background-color: #000;
+  color: #fff;
+  transition-duration: 400ms;
+}
+
+
