--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,26 +9,11 @@ html, body, #app, #app>div {
   height: 100%
 }
 
-/* .home,
-.AboutUs,
-.customerSignup,
-.restaurantSignup,
-.restaurantLogin,
-.deliveryAgentSignup,
-.deliveryAgentLogin {
-  background-color: #fff;
-  background-image: url('./images/img18.jpg');
-  display: flex;
-  height: 90vh;
-  align-items: center;
-  justify-content: center;
-  font-size: 3rem;
-} */
-
-/* Login form design*/
 
 .Login{
   background-color: #3d3f49;
+  height:100%;
+  width:100%;
 }
 .background-form{
   width: 430px;
@@ -140,13 +125,44 @@ html, body, #app, #app>div {
 
 .my-table {
   border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  margin:auto;
+  margin-top: 50px;
+  /* height:70% */
 }
 
-.my-table th, .my-table td {
-  border: 1px solid black;
-  padding: 8px;
+.my-table thead tr {
+  background-color: #232424;
+  color: #ffffff;
   text-align: center;
 }
+
+.my-table th,
+.my-table td {
+    padding: 12px 15px;
+    text-align: center;
+}
+
+.my-table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+.my-table tbody tr:nth-of-type(even) {
+  background-color: #009879;
+}
+
+.my-table tbody tr:last-of-type {
+  border-bottom: 2px solid #009879;
+}
+
+/* .my-table tbody tr.active-row {
+  font-weight: bold;
+  color: #009879;
+} */
 
 
 /* Sign Up Design */
@@ -155,6 +171,8 @@ html, body, #app, #app>div {
   justify-content: center;
 	align-items: center;
   background: url("../src/images/img22.jpg") no-repeat center/ cover;
+  height:100%;
+  width:100%;
 }
 
 .signup-form{
@@ -220,8 +238,16 @@ html, body, #app, #app>div {
   color:#fff;
 }
 
-.CustomerDashboard{
+.CustomerDashboard,.PersonalData,.Order,.AllRestaurants,.ConfirmOrder,.RecentOrderCustomer,.MoreDetailsOrder, .PastOrders,
+.MoreDetailsOrder{
+  text-align:center;
+  min-height: 100vh;
+  width:100%;
   background-image: url("../src/images/img23.jpg");
+  background-repeat:no-repeat;
+  background-size: cover;
+  background-attachment:fixed;
+  padding-bottom:120px;
 }
 
 .CustomerDashboard .cdashcont .cdashoptions{
@@ -250,3 +276,200 @@ html, body, #app, #app>div {
 }
 
 
+.btn1{
+  margin-top: 15px;
+  width: 60%;
+  background-color: #ffffff;
+  color: #080710;
+  padding: 15px 0;
+  font-size: 12px;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btn1:hover{
+  background-color: #000;
+  color: #fff;
+  transition-duration: 400ms;
+}
+
+.gradient {
+  width:50%;
+  align-items: center;
+  margin: auto;
+  height: 0.3em;
+  color: white;
+  background: black;
+  background:linear-gradient(to right,rgb(181, 200, 211),black,black,rgb(181, 200, 211));
+
+}
+
+
+.RestaurantDashboard .rdashcont .rdashoptions{
+  text-align: center;
+}
+
+.RestaurantDashboard,.PersonalDataRestaurant, .Menu,
+.AddFoodItem,.PendingOrderRestaurant,.PastOrdersRestaurant,
+.OrderDetailsRestaurant{
+  text-align:center;
+  min-height: 100vh;
+  width:100%;
+  background-image: url("../src/images/img25.jpg");
+  background-repeat:no-repeat;
+  background-size: cover;
+  background-attachment:fixed;
+  padding-bottom:100px;
+}
+
+.RestaurantDashboard .rdashcont .rdashoptions .rdashbuttons{
+  padding: 10px;
+  width:20%;
+  margin-top: 50px;
+  background-color: #ffffff;
+  color: #080710;
+  padding: 15px 0;
+  font-size: 18px;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+
+.RestaurantDashboard .rdashcont .rdashoptions .rdashbuttons:hover{
+  background-color: #000;
+  color: #fff;
+  transition-duration: 400ms;
+}
+
+
+.regularform{
+  text-align: center;
+  
+  height: 400px;
+  width: 500px;
+  background-color: rgba(255,255,255,0.13);
+  position: absolute;
+  transform: translate(-50%,-50%);
+  top: 40%;
+  left: 50%;
+  border-radius: 10px;
+  backdrop-filter: blur(10px);
+  border: 2px solid rgba(255,255,255,0.1);
+  box-shadow: 0 0 40px rgba(8,7,16,0.6);
+  padding: 50px 35px;
+}
+
+.regularform .form__input{
+  margin:auto;
+  display: block;
+  height: 50px;
+  width: 60%;
+  background-color: rgba(255,255,255,0.07);
+  border-radius: 3px;
+  padding: 0 10px;
+  margin-top: 8px;
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.regularform .btn1{
+  margin-top: 15px;
+  width: 60%;
+  background-color: #45d44d;
+  color: #fff;
+  padding: 15px 0;
+  font-size: 12px;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.regularform .btn1:hover{
+  background-color: #000000;
+  color: #fff;
+  transition-duration: 400ms;
+}
+
+.btntemp{
+  margin-top: 15px;
+  width: 60%;
+  background-color: #45d44d;
+  color: #fff;
+  padding: 15px 0;
+  font-size: 12px;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btntemp:hover{
+  background-color: #000000;
+  color: #fff;
+  transition-duration: 400ms;
+}
+
+
+.gradient1 {
+  width:50%;
+  align-items: center;
+  margin: auto;
+  height: 0.3em;
+  color: white;
+  background: black;
+  background:linear-gradient(to right,rgb(216, 211, 211),black,black, rgb(216, 211, 211));
+
+}
+
+
+.DeliveryAgentDashboard,
+.PersonalDataDeliveryAgent,
+.MarkLocation,.SeeDeliveryRequest,.AcceptDeliveryRequest,.MoreDetailsDeliveryRequest,
+.RatingDeliveryAgent{
+  text-align:center;
+  min-height: 100vh;
+  width:100%;
+  background-image: url("../src/images/img23.jpg");
+  background-repeat:no-repeat;
+  background-size: cover;
+  background-attachment:fixed;
+  padding-bottom:100px;
+}
+
+.DeliveryAgentDashboard .ddashcont .ddashoptions{
+  text-align: center;
+}
+
+.DeliveryAgentDashboard .ddashcont .ddashoptions .ddashbuttons{
+  padding: 10px;
+  width:20%;
+  margin-top: 50px;
+  background-color: #ffffff;
+  color: #080710;
+  padding: 15px 0;
+  font-size: 18px;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+
+.DeliveryAgentDashboard .ddashcont .ddashoptions .ddashbuttons:hover{
+  background-color: #000;
+  color: #fff;
+  transition-duration: 400ms;
+}
+
+.MarkLocation .form__input{
+  margin:auto;
+  display: block;
+  height: 50px;
+  width: 30%;
+  background-color: rgba(255,255,255,0.07);
+  border-radius: 3px;
+  padding: 0 10px;
+  margin-top: 8px;
+  font-size: 14px;
+  font-weight: 300;
+}
