--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -238,7 +238,7 @@ html, body, #app, #app>div {
   color:#fff;
 }
 
-.CustomerDashboard,.PersonalData,.Order,.AllRestaurants,.ConfirmOrder,.RecentOrderCustomer,.MoreDetailsOrder, .PastOrders{
+.CustomerDashboard,.AboutUs,.PersonalData,.Order,.AllRestaurants,.ConfirmOrder,.RecentOrderCustomer,.MoreDetailsOrder, .PastOrders,.RecommendedRestaurant{
   text-align:center;
   min-height: 100vh;
   width:100%;
@@ -511,5 +511,14 @@ html, body, #app, #app>div {
   transition-duration: 400ms;
 }
 
+.AboutUs .aboutusheader{
+  font-size:4em;
+}
 
-
+.AboutUs .aboutuspara{
+  text-align:center;
+  padding-top:1.5em;
+  margin-left:25%;
+  margin-right:25%;
+  font-size:1.5em;
+}
