--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -316,7 +316,7 @@ html, body, #app, #app>div {
   text-align:center;
   min-height: 100vh;
   width:100%;
-  background-image: url("../src/images/img25.jpg");
+  background-image: url("../src/images/img23.jpg");
   background-repeat:no-repeat;
   background-size: cover;
   background-attachment:fixed;
@@ -521,4 +521,36 @@ html, body, #app, #app>div {
   margin-left:25%;
   margin-right:25%;
   font-size:1.5em;
+}
+
+.navbar-dashboard{
+  margin-top:20px;
+  margin-left:70px;
+  position:absolute;
+  top:0;
+  left:0;
+}
+.btnlogout{
+  position:absolute;
+  right:0;
+  margin-right:70px;
+  margin-bottom:15px;
+}
+
+.btnlogout{
+  margin-top: 15px;
+  width: 60%;
+  background-color: #ffffff;
+  color: #080710;
+  padding: 15px 0;
+  font-size: 12px;
+  font-weight: 600;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btnlogout:hover{
+  background-color: #000;
+  color: #fff;
+  transition-duration: 400ms;
 }
